[tool.poetry]
name = "my-apps"
version = "0.1.0"
description = ""
authors = ["Ryu Takahashi <107231834+ryu-thakahashi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf2 = "^3.0.1"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
